add dialog test, fix xlsx gen